feat(index): add og tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML/CSS</title>
     <meta name="description" content="Bootcamp Website" />
     <meta name="keywords" content="bootcamp, frontend, js" />
+    <!-- og:tags -->
+    <meta property="og:title" content="Bootcamp" />
+    <meta property="og:description" content="Bootcamp Website" />
+    <meta property="og:image" content="" />
+    <meta
+      property="”og:url”"
+      content="https://vre2h.github.io/bootcamp-html-project/index.html"
+    />
+    <!-- og:tags-end -->
     <!-- favicon start -->
     <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon" />
     <link
