feat(index.html): Added og:image content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- og:tags -->
     <meta property="og:title" content="Bootcamp" />
     <meta property="og:description" content="Bootcamp Website" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/79997615/121490384-ff215380-c9e5-11eb-9ce8-7f539edbd5d9.png" />
     <meta
       property="”og:url”"
       content="https://vre2h.github.io/bootcamp-html-project/index.html"
