feat(*): add css backbone

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <!-- og:tags -->
     <meta property="og:title" content="Bootcamp" />
     <meta property="og:description" content="Bootcamp Website" />
-    <meta property="og:image" content="https://user-images.githubusercontent.com/79997615/121490384-ff215380-c9e5-11eb-9ce8-7f539edbd5d9.png" />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/79997615/121490384-ff215380-c9e5-11eb-9ce8-7f539edbd5d9.png"
+    />
     <meta
       property="”og:url”"
       content="https://vre2h.github.io/bootcamp-html-project/index.html"
@@ -88,8 +91,40 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- favicon end -->
+
+    <!-- css start -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="stylesheet" href="./assets/styles/main.css" />
+    <!-- css end -->
   </head>
   <body>
+    <header>
+      <div>
+        <img width="50" src="./assets/img/logo.jpeg" />
+      </div>
+      <nav>
+        <a href="./about.html">About</a>
+        <a href="./contacts.html">Contacts</a>
+        <a href="./register.html">Register</a>
+        <a href="./courses.html">Courses</a>
+        <a href="./bootcamps.html">Bootcamps</a>
+      </nav>
+      <div>
+        <a
+          href="tel:37412481632
+        "
+          >(+374) 12 48 16 32
+        </a>
+      </div>
+      <button>Apply</button>
+      <div>
+        <a href="./hy/index.html">հայ</a> /
+        <a href="./index.html">en</a>
+      </div>
+    </header>
     <h1>HTML/CSS</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
