feat(footer): Added footer into index.html and styles

--- a/index.html
+++ b/index.html
@@ -88,14 +88,45 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- favicon end -->
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="./styles/blocks/footer.css">
+    <!-- stylesheets end -->
+    <!-- scripts -->
+    <script src="https://kit.fontawesome.com/cc91a6265e.js" crossorigin="anonymous"></script>
+    <!-- scripts end -->
   </head>
   <body>
-    <h1>HTML/CSS</h1>
+    <h1 id="header">HTML/CSS</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
       asperiores, molestias quaerat odio sequi repudiandae possimus qui
       blanditiis aliquam labore amet? Cumque repudiandae veritatis earum
       obcaecati id animi reprehenderit consequuntur.
     </p>
+
+    <!-- footer -->
+    <footer class="homepage-footer">
+      <div class="homepage-footer__row">
+        <!-- copywriting section -->
+        <div class="homepage-footer__copywriting">
+          <span>© ACA | +374 12 48 16 32</span>
+        </div>
+        <!-- copywriting section end -->
+        <!-- social section -->
+        <div class="homepage-footer__social">
+          <!-- facebook -->
+          <a href="#"><i class="fab fa-facebook-square"></i></a>
+          <a href="#"><i class="fab fa-twitter-square"></i></a>
+          <a href="#"><i class="fab fa-instagram-square"></i></a>
+        </div>
+        <!-- social section end -->
+        <!-- back to top section -->
+        <div class="homepage-footer__back-to-top">
+          <a href="#header">Back to top</a>
+        </div>
+        <!-- back to top section end -->
+      </div>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
