feat(header): add main header

--- a/index.html
+++ b/index.html
@@ -101,28 +101,30 @@
     <!-- css end -->
   </head>
   <body>
-    <header>
-      <div>
-        <img width="50" src="./assets/img/logo.jpeg" />
-      </div>
-      <nav>
-        <a href="./about.html">About</a>
-        <a href="./contacts.html">Contacts</a>
-        <a href="./register.html">Register</a>
-        <a href="./courses.html">Courses</a>
-        <a href="./bootcamps.html">Bootcamps</a>
-      </nav>
-      <div>
-        <a
-          href="tel:37412481632
+    <header class="main-header">
+      <div class="wrapper header-container">
+        <div>
+          <img class="logo" width="50" src="./assets/img/logo.jpeg" />
+        </div>
+        <nav class="main-nav">
+          <a class="main-nav-link" href="./about.html">About</a>
+          <a class="main-nav-link" href="./contacts.html">Contacts</a>
+          <a class="main-nav-link" href="./register.html">Register</a>
+          <a class="main-nav-link" href="./courses.html">Courses</a>
+          <a class="main-nav-link" href="./bootcamps.html">Bootcamps</a>
+        </nav>
+        <div class="phone">
+          <a
+            href="tel:37412481632
         "
-          >(+374) 12 48 16 32
-        </a>
-      </div>
-      <button>Apply</button>
-      <div>
-        <a href="./hy/index.html">հայ</a> /
-        <a href="./index.html">en</a>
+            >(+374) 12 48 16 32
+          </a>
+        </div>
+        <button class="main-btn">Apply</button>
+        <div class="languages">
+          <a href="./hy/index.html">հայ</a> /
+          <a href="./index.html">en</a>
+        </div>
       </div>
     </header>
     <h1>HTML/CSS</h1>
