--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
     />
     <link rel="stylesheet" href="./assets/styles/main.css" />
     <!-- css end -->
+    <!-- fonts start -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- fonts end -->
   </head>
   <body>
     <header id="header" class="main-header">
