feat(conflict): added conflicts section

--- a/index.html
+++ b/index.html
@@ -140,13 +140,36 @@
         </div>
       </div>
     </header>
+
     <h1>HTML/CSS</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
-      asperiores, molestias quaerat odio sequi repudiandae possimus qui
-      blanditiis aliquam labore amet? Cumque repudiandae veritatis earum
-      obcaecati id animi reprehenderit consequuntur.
-    </p>
+
+    <section>
+      <h2>Conflicts</h2>
+      <p class="subtitle">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
+        asperiores, molestias quaerat odio sequi repudiandae possimus qui
+        blanditiis aliquam labore amet? Cumque repudiandae veritatis earum
+        obcaecati id animi reprehenderit consequuntur.
+      </p>
+      <p class="subtitle">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
+        asperiores, molestias quaerat odio sequi repudiandae possimus qui
+        blanditiis aliquam labore amet? Cumque repudiandae veritatis earum
+        obcaecati id animi reprehenderit consequuntur.
+      </p>
+      <p class="subtitle">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
+        asperiores, molestias quaerat odio sequi repudiandae possimus qui
+        blanditiis aliquam labore amet? Cumque repudiandae veritatis earum
+        obcaecati id animi reprehenderit consequuntur.
+      </p>
+      <p class="subtitle">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit,
+        asperiores, molestias quaerat odio sequi repudiandae possimus qui
+        blanditiis aliquam labore amet? Cumque repudiandae veritatis earum
+        obcaecati id animi reprehenderit consequuntur.
+      </p>
+    </section>
 
     <!-- footer -->
     <footer class="homepage-footer">
