--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
       </div>
     </div>
 
+    <!-- Address -->
+    <div class="address">
+      <div class="address__image">
+        <img src="./assets/img/location.svg" alt="location sign">
+      </div>
+      <div class="address__text">
+        Armenian Code Academy<br>
+        3 Hakob Hakobyan, Yerevan
+      </div>
+    </div>
    
 
     <!-- course selection -->
