--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       src="https://kit.fontawesome.com/cc91a6265e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/registration.js"></script>
     <!-- scripts end -->
 
     <!-- css start -->
@@ -182,8 +183,50 @@
         3 Hakob Hakobyan, Yerevan
       </div>
     </div>
-   
 
+    <!-- Registration -->
+    <div class="registration">
+      <div class="registration__container">
+        <!-- Title -->
+        <div class="registration__title">
+          Registration for Machine Learning<br>
+          and QA Bootcamps is open!
+        </div>
+
+        <!-- Date -->
+        <div class="registration__date">
+
+          <div class="date-block registration__days"> 
+            <span class="num days-num">14</span>
+            <div class="days">Days</div>
+          </div>
+          <div class="date-block registration__hours">
+            <span class="num hours-num">18</span>
+            <div class="hours">Hours</div>
+          </div>
+          <div class="date-block registration__minuits">
+            <span class="num minutes-num">50</span>
+            <div class="minutes">Minutes</div>
+          </div>
+          <div class="registration__seconds">
+            <span class="num seconds-num">3</span>
+            <div class="seconds">Seconds</div>
+          </div>
+        </div>
+
+        <!-- Number -->
+        <div class="registration__number">
+          <div class="text">Leave your phone number below for a free Consultation</div>
+          <form class="registration__form" action="#">
+            <div class="registration__input-wrap">
+              <input class="num-input" type="text">
+              <button class="registration__submit-button">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    
     <!-- course selection -->
     <div id="courses" class="course-selection mb-20">
       <div class="container">
