fix(#37): remove crutch

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
     
     <!-- What to Expect -->
-    <div id="ex" class="ex">
+    <div class="ex">
       <div class="ex__background">
         <div class="ex__container">
           <div class="ex__title">What to Expect</div>
