feat(#41): consultation block

--- a/index.html
+++ b/index.html
@@ -423,6 +423,26 @@
       </div>
     </div>
 
+    <!-- Consultation -->
+    <div id="cons" class="cons">
+      <div class="cons__bg">
+        <div class="cons__title">Sign Up for a free Consultation</div>
+        <div class="cons__text">
+          Didn't decide yet which patch fits you best? Our Program<br>
+          Coordinators will be happy to help you!
+        </div>
+        <div class="cons__form">
+          <form action="#cons">
+            <div class="cons__form-container">
+              <input class="cons__form-input cons__email" type="text">
+              <input class="cons__form-input cons__phone" type="text">
+              <button class="cons__submit-button">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <!-- footer -->
     <footer class="homepage-footer">
       <div class="homepage-footer__row">
