feat(#43): responsivity for tablet size

--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
         <div class="cons__form">
           <form action="#cons">
             <div class="cons__form-container">
-              <input class="cons__form-input cons__email" type="text">
-              <input class="cons__form-input cons__phone" type="text">
+              <input class="cons__form-input cons__email" type="text" placeholder="Email">
+              <input class="cons__form-input cons__phone" type="text" placeholder="Phone number">
               <button class="cons__submit-button">Send</button>
             </div>
           </form>
