--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       src="https://kit.fontawesome.com/cc91a6265e.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/registration.js"></script>
+    <script src="./assets/js/registration.js" defer></script>
     <!-- scripts end -->
 
     <!-- css start -->
@@ -197,19 +197,19 @@
         <div class="registration__date">
 
           <div class="date-block registration__days"> 
-            <span class="num days-num">14</span>
+            <span class="num days-num"></span>
             <div class="days">Days</div>
           </div>
           <div class="date-block registration__hours">
-            <span class="num hours-num">18</span>
+            <span class="num hours-num"></span>
             <div class="hours">Hours</div>
           </div>
           <div class="date-block registration__minuits">
-            <span class="num minutes-num">50</span>
+            <span class="num minutes-num"></span>
             <div class="minutes">Minutes</div>
           </div>
           <div class="registration__seconds">
-            <span class="num seconds-num">3</span>
+            <span class="num seconds-num"></span>
             <div class="seconds">Seconds</div>
           </div>
         </div>
