--- a/index.html
+++ b/index.html
@@ -197,19 +197,19 @@
         <div class="registration__date">
 
           <div class="date-block registration__days"> 
-            <span class="num days-num"></span>
+            <span class="timer-digit days-num"></span>
             <div class="days">Days</div>
           </div>
           <div class="date-block registration__hours">
-            <span class="num hours-num"></span>
+            <span class="timer-digit hours-num"></span>
             <div class="hours">Hours</div>
           </div>
           <div class="date-block registration__minuits">
-            <span class="num minutes-num"></span>
+            <span class="timer-digit minutes-num"></span>
             <div class="minutes">Minutes</div>
           </div>
           <div class="registration__seconds">
-            <span class="num seconds-num"></span>
+            <span class="timer-digit seconds-num"></span>
             <div class="seconds">Seconds</div>
           </div>
         </div>
@@ -424,19 +424,19 @@
     </div>
 
     <!-- Consultation -->
-    <div id="cons" class="cons">
-      <div class="cons__bg">
-        <div class="cons__title">Sign Up for a free Consultation</div>
-        <div class="cons__text">
+    <div id="consultation" class="consultation">
+      <div class="consultation__bg">
+        <div class="consultation__title">Sign Up for a free Consultation</div>
+        <div class="consultation__text">
           Didn't decide yet which patch fits you best? Our Program<br>
           Coordinators will be happy to help you!
         </div>
-        <div class="cons__form">
-          <form action="#cons">
-            <div class="cons__form-container">
-              <input class="cons__form-input cons__email" type="text" placeholder="Email">
-              <input class="cons__form-input cons__phone" type="text" placeholder="Phone number">
-              <button class="cons__submit-button">Send</button>
+        <div class="consultation__form">
+          <form action="#consultation">
+            <div class="consultation__form-container">
+              <input class="consultation__form-input consultation__email" type="text" placeholder="Email">
+              <input class="consultation__form-input consultation__phone" type="text" placeholder="Phone number">
+              <button class="consultation__submit-button">Send</button>
             </div>
           </form>
         </div>
