feat(#46): Update forms design, validation.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/registration.js" defer></script>
+    <script src="./assets/js/consultation.js" defer></script>
     <!-- scripts end -->
 
     <!-- css start -->
@@ -185,7 +186,7 @@
     </div>
 
     <!-- Registration -->
-    <div class="registration">
+    <div id="registration" class="registration">
       <div class="registration__container">
         <!-- Title -->
         <div class="registration__title">
@@ -217,9 +218,9 @@
         <!-- Number -->
         <div class="registration__number">
           <div class="text">Leave your phone number below for a free Consultation</div>
-          <form class="registration__form" action="#">
+          <form class="registration__form" action="#registration">
             <div class="registration__input-wrap">
-              <input class="num-input" type="text">
+              <input id="reg-phone-input" class="num-input" type="text" placeholder="Phone number">
               <button class="registration__submit-button">Send</button>
             </div>
           </form>
@@ -430,15 +431,25 @@
         <div class="consultation__text">
           Didn't decide yet which patch fits you best? Our Program<br>
           Coordinators will be happy to help you!
-        </div>
-        <div class="consultation__form">
-          <form action="#consultation">
-            <div class="consultation__form-container">
-              <input class="consultation__form-input consultation__email" type="text" placeholder="Email">
-              <input class="consultation__form-input consultation__phone" type="text" placeholder="Phone number">
-              <button class="consultation__submit-button">Send</button>
-            </div>
-          </form>
+        </div> 
+        <div class="consultation-form">
+          <div class="consultation-form__bg">
+              <div class="consultation-form__container">
+                  <form name="consult-form" action="#" onsubmit="return validate('submit')">
+                      <div class="consultation-form__inp-btn-wrap">
+                        <div class="consultation-form__email-section">
+                          <input id="email-input" class="consultation-form__input db" type="text" placeholder="Email" required>
+                          <span id="email-error" class="consultation-form__error db"></span>
+                        </div>
+                        <div class="consultation-form__phone-section">
+                          <input id="phone-input" class="consultation-form__input db" type="text" placeholder="Phone number" required>
+                          <span id="phone-error" class="consultation-form__error db"></span>
+                        </div>
+                        <button class="consultation-form__submit db">Send</button>                        
+                      </div>
+                  </form>
+              </div>
+          </div>
         </div>
       </div>
     </div>
